---
source: packages/lexer/src/lexers/source_file_lexer.rs
expression: lexer.tokens
---
- kind:
    Keyword:
      DeclarationKeyword: Var
  range:
    from:
      line: 1
      column: 1
    to:
      line: 1
      column: 3
- kind:
    Identifier: my_test_var
  range:
    from:
      line: 1
      column: 5
    to:
      line: 1
      column: 15
- kind:
    Symbol: VarAssignmentColon
  range:
    from:
      line: 1
      column: 16
    to:
      line: 1
      column: 16
- kind:
    Type: Int
  range:
    from:
      line: 1
      column: 18
    to:
      line: 1
      column: 20
- kind:
    Symbol: Newline
  range:
    from:
      line: 1
      column: 21
    to:
      line: 1
      column: 21
- kind:
    Symbol: Newline
  range:
    from:
      line: 2
      column: 1
    to:
      line: 2
      column: 1
- kind:
    Keyword:
      VarModifierKeyword: Pub
  range:
    from:
      line: 3
      column: 1
    to:
      line: 3
      column: 3
- kind:
    Keyword:
      DeclarationKeyword: Var
  range:
    from:
      line: 3
      column: 5
    to:
      line: 3
      column: 7
- kind:
    Identifier: my_pub_test_var
  range:
    from:
      line: 3
      column: 9
    to:
      line: 3
      column: 23
- kind:
    Symbol: VarAssignmentColon
  range:
    from:
      line: 3
      column: 24
    to:
      line: 3
      column: 24
- kind:
    Type: String
  range:
    from:
      line: 3
      column: 26
    to:
      line: 3
      column: 28
- kind:
    Symbol: Newline
  range:
    from:
      line: 3
      column: 29
    to:
      line: 3
      column: 29
- kind:
    Keyword:
      DeclarationKeyword: Var
  range:
    from:
      line: 4
      column: 1
    to:
      line: 4
      column: 3
- kind:
    Identifier: my_attr_test_var
  range:
    from:
      line: 4
      column: 5
    to:
      line: 4
      column: 20
- kind:
    Symbol: VarAssignmentColon
  range:
    from:
      line: 4
      column: 21
    to:
      line: 4
      column: 21
- kind:
    Type: Url
  range:
    from:
      line: 4
      column: 23
    to:
      line: 4
      column: 25
- kind:
    Symbol: BlockOpenCurly
  range:
    from:
      line: 4
      column: 27
    to:
      line: 4
      column: 27
- kind:
    Symbol: Newline
  range:
    from:
      line: 4
      column: 28
    to:
      line: 4
      column: 28
- kind:
    Identifier: protocol
  range:
    from:
      line: 5
      column: 5
    to:
      line: 5
      column: 12
- kind:
    Symbol: AttributeAssignmentEquals
  range:
    from:
      line: 5
      column: 14
    to:
      line: 5
      column: 14
- kind:
    Literal:
      String: https
  range:
    from:
      line: 5
      column: 16
    to:
      line: 5
      column: 22
- kind:
    Symbol: Newline
  range:
    from:
      line: 5
      column: 23
    to:
      line: 5
      column: 23
- kind:
    Identifier: host
  range:
    from:
      line: 6
      column: 5
    to:
      line: 6
      column: 8
- kind:
    Symbol: AttributeAssignmentEquals
  range:
    from:
      line: 6
      column: 10
    to:
      line: 6
      column: 10
- kind:
    Literal:
      String: test.com
  range:
    from:
      line: 6
      column: 12
    to:
      line: 6
      column: 21
- kind:
    Symbol: Newline
  range:
    from:
      line: 6
      column: 22
    to:
      line: 6
      column: 22
- kind:
    Symbol: BlockCloseCurly
  range:
    from:
      line: 7
      column: 1
    to:
      line: 7
      column: 1
